[gd_scene load_steps=6 format=3 uid="uid://dsja1g13h601"]

[ext_resource type="Script" path="res://Menu.gd" id="1_rwr1w"]
[ext_resource type="Texture2D" uid="uid://5jybueyg4h2k" path="res://images/Title bg.png" id="2_1nnc1"]
[ext_resource type="SystemFont" uid="uid://blesrgtfjjsxh" path="res://main_menu.tres" id="3_3kcwb"]
[ext_resource type="FontFile" uid="uid://8rn0nav5awg8" path="res://ARCADECLASSIC.TTF" id="3_u75er"]
[ext_resource type="Script" path="res://Control.gd" id="5_dexub"]

[node name="main menu" type="Node2D"]
scale = Vector2(0.279401, 0.279401)

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1151.0
offset_bottom = 648.0
script = ExtResource("1_rwr1w")

[node name="TextureRect" type="TextureRect" parent="Menu"]
texture_filter = 1
texture_repeat = 1
layout_mode = 1
offset_right = 598.0
offset_bottom = 346.0
scale = Vector2(1.91441, 1.86266)
texture = ExtResource("2_1nnc1")

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
layout_direction = 2
layout_mode = 0
offset_left = 432.0
offset_top = 359.0
offset_right = 642.0
offset_bottom = 460.0
scale = Vector2(1.70226, 1.57586)

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MarginContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 10
alignment = 1

[node name="play" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 0
theme_override_fonts/font = ExtResource("3_3kcwb")
text = "Play"

[node name="options" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 0
theme_override_fonts/font = ExtResource("3_3kcwb")
text = "Settings"

[node name="Quit" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 0
theme_override_fonts/font = ExtResource("3_3kcwb")
text = "Quit"

[node name="Label" type="Label" parent="Menu"]
layout_mode = 0
offset_left = 292.0
offset_top = 94.0
offset_right = 965.0
offset_bottom = 204.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 4
theme_override_constants/shadow_outline_size = 6
theme_override_constants/line_spacing = 8
theme_override_fonts/font = ExtResource("3_u75er")
theme_override_font_sizes/font_size = 100
text = "Miami Madness"

[node name="Settings menu" type="Control" parent="Menu"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_dexub")

[node name="TextureRect" type="TextureRect" parent="Menu/Settings menu"]
texture_filter = 1
texture_repeat = 1
layout_mode = 0
offset_right = 602.0
offset_bottom = 348.0
scale = Vector2(1.91441, 1.86266)
texture = ExtResource("2_1nnc1")

[node name="MarginContainer" type="MarginContainer" parent="Menu/Settings menu"]
layout_mode = 0
offset_left = 498.0
offset_top = 132.0
offset_right = 647.0
offset_bottom = 187.0
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/Settings menu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="volume" type="Button" parent="Menu/Settings menu/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "volume"

[node name="credits" type="Button" parent="Menu/Settings menu/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "credits"

[node name="settingsTitle" type="Label" parent="Menu/Settings menu"]
texture_filter = 1
layout_mode = 0
offset_left = 457.0
offset_top = 49.0
offset_right = 692.0
offset_bottom = 115.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 0
theme_override_constants/shadow_outline_size = -6
theme_override_constants/line_spacing = 2
theme_override_fonts/font = ExtResource("3_3kcwb")
theme_override_font_sizes/font_size = 65
text = "volume"

[node name="ColorRect2" type="ColorRect" parent="Menu/Settings menu"]
layout_mode = 0
offset_left = 110.0
offset_top = 183.0
offset_right = 523.0
offset_bottom = 596.0
scale = Vector2(2.2801, 0.945079)
color = Color(0.0980392, 0.0980392, 0.0980392, 0.678431)

[node name="volumeContainer" type="MarginContainer" parent="Menu/Settings menu/ColorRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 219.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.654176, 0.991202)

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/Settings menu/ColorRect2/volumeContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="empty" type="Label" parent="Menu/Settings menu/ColorRect2/volumeContainer/VBoxContainer"]
layout_mode = 2

[node name="vol" type="Label" parent="Menu/Settings menu/ColorRect2/volumeContainer/VBoxContainer"]
layout_mode = 2
text = "Volume"

[node name="CreditContainer" type="MarginContainer" parent="Menu/Settings menu/ColorRect2"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 512.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.446681, 1.11048)

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/Settings menu/ColorRect2/CreditContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Menu/Settings menu/ColorRect2/CreditContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
text = "John Lead devloper"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Menu/Settings menu/ColorRect2/CreditContainer/VBoxContainer"]
layout_mode = 2
text = "Dylan "
horizontal_alignment = 1

[node name="Label3" type="Label" parent="Menu/Settings menu/ColorRect2/CreditContainer/VBoxContainer"]
layout_mode = 2
text = "Kennedy"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="Menu/Settings menu/ColorRect2/CreditContainer/VBoxContainer"]
layout_mode = 2
text = "Josh art intern"
horizontal_alignment = 1

[node name="exit" type="Button" parent="Menu/Settings menu"]
layout_mode = 0
offset_left = 133.0
offset_top = 596.0
offset_right = 1009.0
offset_bottom = 627.0
text = "Exit"
